--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -3,15 +3,15 @@
 
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath 'com.google.appengine:gradle-appengine-plugin:1.9.14'
+        classpath 'com.google.appengine:gradle-appengine-plugin:1.9.18'
     }
 }
 
 repositories {
-    mavenCentral();
+    jcenter();
 }
 
 apply plugin: 'java'
@@ -22,9 +22,7 @@ sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 
 dependencies {
-    appengineSdk 'com.google.appengine:appengine-java-sdk:1.9.14'
-    compile 'com.google.appengine:appengine-endpoints:1.9.14'
-    compile 'com.google.appengine:appengine-endpoints-deps:1.9.14'
+    appengineSdk 'com.google.appengine:appengine-java-sdk:1.9.18'
     compile 'javax.servlet:servlet-api:2.5'
 }
 
@@ -33,8 +31,4 @@ appengine {
     appcfg {
         oauth2 = true
     }
-    endpoints {
-        getClientLibsOnBuild = true
-        getDiscoveryDocsOnBuild = true
     }
-}
