--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:name=".OpeningActivity"
             android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="com.example.admin.OPENINGACTIVITY" />
+                <action android:name="com.housing.vccalling.OPENINGACTIVITY" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
