--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "23.0.0 rc2"
+    buildToolsVersion '21.1.2'
     defaultConfig {
         applicationId 'com.housing.vccalling'
         minSdkVersion 15
@@ -21,7 +21,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
-    compile files('C:/Users/Admin/AndroidStudioProjects/VCCalling/backend/build/libs/appengine-api-1.0-sdk-1.2.0.jar')
+    compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'com.android.support:recyclerview-v7:21.0.+'
+
+ //   compile files('C:/Users/Admin/AndroidStudioProjects/VCCalling/backend/build/libs/appengine-api-1.0-sdk-1.2.0.jar')
 }
