--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 23
+    buildToolsVersion "24.0.0"
     defaultConfig {
         applicationId "com.labs.poziom.whereabouts"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 22
         versionCode 3
         versionName "3.0"
         /* jackOptions {
@@ -29,21 +29,21 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //gson retrofit
     //gson retrofit
-    compile 'com.android.support:design:25.3.1'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.android.support:design:23.0.1'
     compile 'com.google.code.gson:gson:2.7'
+    compile 'com.android.support:recyclerview-v7:22.2.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.netflix.rxjava:rxjava-android:0.16.1'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'ch.acra:acra:4.9.0'
-    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-database:9.0.0'
     testCompile 'junit:junit:4.12'
 }
 
